chamber/styles/large.css
@media only screen and (min-width: 38rem) {

    :root {
        --text-color1: #3A3335;
        --text-color2: #FDF0D5;
        --text-color3: #C6D8D3;
        --background-color1: #3A3335;
        --background-color2: #D81E5B;
        --text-font: "Rubik", sans-serif;
        --headings-text: "Ubuntu", sans-serif;
    }

    body {
        max-width: 1200px;
        margin: 0 auto;
    }

    main, footer {
        max-width: 800px;
        margin: 0 auto;
    }

    header {
        display: grid;
        grid-template-columns: 1fr 1fr;
        border-bottom: 1px solid var(--background-color1);
    }

    .mobile-header {
        display: grid;
        grid-template-columns: 0.1fr 1fr;
    }

    .mobile-header span {
        margin-top: 15px;
        font-size: 1.5rem;
    }

    main h1 {
        margin-bottom: 8px;
    }

    .mobile-header img {
        margin-top: 15px;
        place-self: center;
        width: auto;
        height: auto;
    }

    /* navigation button */
    #ham-btn {
        display: none;
    }

    .navigation {
        display: block;
        
    }

    .navigation ul {
        flex-wrap: nowrap;
        border: none;
    }

    .navigation li {
        background-color: transparent;
        border: none;
        padding: 10px;
    }

    .navigation a {
        color: var(--text-color1);
    }

    .navigation .current {  
        border: none;
    }

    .navigation .current {  
        text-decoration: underline;
        text-decoration-skip-ink: none;
    }

    main picture img {
        width: 100%;
        height: auto;
    }

    .directory section {
    width: 93%;
    height: 400px;
    border: 3px solid var(--background-color1);
    padding-bottom: 10px;
}

    .directory section:last-child {
        width: 413px;
        height: auto;
        grid-column: 1 / 3;
    }

    .list section {
        display: grid;
        gap: 10px;
        grid-template-columns: 1fr 1fr 1fr 1fr;
        place-items: center;
        height: auto;
    }

    footer {
        margin-top: 30px;
        border: 3px solid var(--background-color1);
        display: grid;
        grid-template-columns: 1fr 0.7fr 1fr;
        place-items: center;
        padding: 30px;
    }

}

